--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -66,7 +66,7 @@
 #### 5. 学员管理
 
 - 作为企业管理员，您可以在“学员管理”中导入您的学员（学生），您可以选择“新增学员”通过输入学员“姓名”、“手机号”作为学员的基本信息，同时您也可以设置学员头像及学员简介；您也可以通过“批量导入”按照模板格式导入学员。
-- 在“学员管理”中您可以通过“编辑”编辑学员信息（姓名、手机号、简介、邮箱等）也可以编辑“是否启用账户”。
+- 在“学员管理”中您可以通过“编辑”，编辑学员信息（姓名、手机号、简介、邮箱等）也可以编辑“是否启用账户”。
 - 通过“禁用”，您可以将学员账户禁用，禁用后学员将不能通过您的企业使用云课堂。禁用后您可以通过“启用”将学员账户重新启用。
 - 您可以通过输入学员手机号或姓名查询学员。
 
