--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -61,7 +61,7 @@
 
 #### 4. 回放管理
 
-在“回放管理”中，您可以查看已结束课程的回放，也可以通过复制链接将回放链接分享给学生，也可以删除回放，删除后回放将不会在课件管理中出现。
+在“回放管理”中，当您身份为老师时，您可以查看已结束课程的回放，也可以通过复制链接将回放链接分享给学生，也可以删除回放，删除后回放将不会在课件管理中出现。
 
 #### 5. 学员管理
 
@@ -72,7 +72,7 @@
 
 #### 6. 企业中心
 
-在“企业中心”中，您可已查看企业的基本信息“企业名称”、“企业状态”、“企业类型”，您也可以上传“企业 LOGO”及“课堂 LOGO”。
+在“企业中心”中，您可以查看企业的基本信息“企业名称”、“企业状态”、“企业类型”，您也可以上传“企业 LOGO”及“课堂 LOGO”。
 
 #### 7. 帮助中心
 
