--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -38,7 +38,7 @@
 
 #### 7. 课件管理
 
-在课件管理中，您可以查看课件库中的文件，也可以进行课件的上传，点击“新增课件”后，您可以选择将课件上传到“私人课件”/“公共课件”。点击文件可以打开课件展示给学生，您可以在课堂中进行课件滚动（PDF/word），翻页（PPT）等操作，您也可以在课件上进行板书涂鸦。
+在课件管理中，您可以查看课件库中的文件，也可以进行课件的上传，点击“新增课件”后，您可以选择将课件上传到“私人课件”或“公共课件”。点击文件可以打开课件展示给学生，您可以在课堂中进行课件滚动（PDF/word），翻页（PPT）等操作，您也可以在课件上进行板书涂鸦。
 :::
 ::: 管理后台
 #### 1. 课堂管理
@@ -46,11 +46,11 @@
 - 教室列表：管理员可在教室列表查看企业下的所有教室信息，可通过教室类型，教室状态，教室名称查询。也可以在教室列表新建教室。
 - 创建教室：通过点击“极速开课”快速创建课程，默认教室名称为“某某老师的教室-日期”，默认开课时间为当前时间，结束时间为当前时间加一小时，选择班型后，点确定即可创建成功。创建成功后，可直接上课，也可以在管理中修改老师。
 - 直播回放：您可以通过“直播回放”查看已结束的课堂回放，您也可以通过分享链接将回放发送给学生。
-- 分享：复制课堂链接：复制课堂邀请信息，通过微信、企业微信、短信等聊天工具发送给被邀请人，被邀请人可以通过课堂号、课堂链接等方式加入课堂。
+- 分享：复制课堂链接，复制课堂邀请信息，通过微信、企业微信、短信等聊天工具发送给被邀请人，被邀请人可以通过课堂号、课堂链接等方式加入课堂。
 
 #### 2. 课件管理
 
-在课件管理中，您可以查看课件库中的文件，也可以进行课件的上传，点击“新增课件”后，您可以选择将课件上传到“私人课件”/“公共课件”。您可以单击“删除”，删除课件库中的文件，删除后课件文件将不会在课件库中出现。您可以通过“查询”，搜索您在课件库中的文件。
+在课件管理中，您可以查看课件库中的课件，也可以进行课件的上传，点击“新增课件”后，您可以选择将课件上传到“私人课件”或“公共课件”。您可以单击“删除”，删除课件库中的课件，删除后课件将不会在课件库中出现。您可以通过“查询”，搜索您在课件库中的课件。
 
 #### 3. 员工管理
 
