--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -13,20 +13,20 @@
 
 预约开课是指您通过填写预定信息后发起的课堂，您可以在预约课程页面填写“课堂名称”、“课堂类型”、“开始时间”、“结束时间”以及对课堂的配置进行设置“提前进入课堂”、“是否允许旁听”、“邀请学员”、“课堂布局”等。预约成功后在客户端首页的“直播课表”中将为您展示今天及今天以后预约的课程。您可以将预定课
 
-程的信息通过邮箱、短信、微信、企业微信等方式发送给学员。学员可以通过课程链接一键加入课堂。当您的身份为老师离开课堂时，点击“下课”按钮，如果选择“暂时离开”，表示您暂时离开了该课堂，但您可以随时返回该课堂。若选择“下课”则终止课堂，课堂中的所有的学员都会将离开该课堂。当您的身份为学员时，点击“离开”，则会推出课堂，在课堂未结束的情况下，您随时都可以回到该会议，如果课堂已下课则无法再进入。
+程的信息通过邮箱、短信、微信、企业微信等方式发送给学员。学员可以通过课程链接一键加入课堂。当您的身份为老师离开课堂时，点击“下课”按钮，如果选择“暂时离开”，表示您暂时离开了该课堂，但您可以随时返回该课堂。若选择“下课”则终止课堂，课堂中的所有的学员都会将离开该课堂。当您的身份为学员时，点击“离开”，则会退出课堂，在课堂未结束的情况下，您随时都可以回到该课堂，如果课堂已下课则无法再进入。
 
 #### 3. 邀请加入课堂
 
 当您身份为老师时，您可以通过以下方式邀请学员加入课堂：
 - 复制课堂链接：复制课堂邀请信息，通过微信、企业微信、短信等聊天工具发送给被邀请人，被邀请人可以通过课堂号、课堂链接等方式加入课堂。
-- 发送课堂二维码：保存课堂邀请二维码，通过微信、企业微信等聊天工具发送给被邀请人，被邀请人可以通过扫面二维码加入课堂。
+- 发送课堂二维码：保存课堂邀请二维码，通过微信、企业微信等聊天工具发送给被邀请人，被邀请人可以通过扫描二维码加入课堂。
 - 预约邀请：预约开课时添加学员进行邀请，勾选指定学员加入课堂。被邀请的学员可以在直播课表中加入课堂。
 
 #### 4. 教学工具
 
 - 白板：支持在白板上进行板书、涂鸦、互动等功能。
 - 涂鸦工具：提供包括画笔与形状、橡皮擦、激光笔、截屏等工具
-- 互动工具：计时器、抢答器、随堂测等产品能力。
+- 互动工具：计时器、抢答器、随堂测等产品功能。
 
 #### 5. 共享屏幕
 
@@ -34,7 +34,7 @@
 
 #### 6. 花名册
 
-在花名册中，您可以查看课堂中学生总览，学生在线离线状态。同时，您也可以在花名册中控制学生权限：打开/关闭学生语音、打开/关闭学生摄像头、涂鸦权限、讨论区发言权限以及将学生移除教室。
+当您身份为老师时，在花名册中，您可以查看课堂中学生总览，学生在线离线状态。同时，您也可以在花名册中控制学生权限：打开/关闭学生语音、打开/关闭学生摄像头、涂鸦权限、讨论区发言权限以及将学生移除教室。
 
 #### 7. 课件管理
 
