--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -6,14 +6,12 @@
 ::: 互动课堂
 #### 1. 极速开课
 
-当您的身份为老师时，您可以极速开课。登录云课堂后，点击极速开课，确定课程名称、课程类型及课程开始结束时间，您即可创建课程并可以将会议相关信息发送给学员。您可以在直播课表中找到您创建的课程，点击进入课堂即可开始上课。进入课堂后，当您选择下暂时离开时，您可以通过直播课表中对应课程教室再次回到教室中，当您选择下课时，则会直接结束课程。
+当您的身份为老师时，您可以极速开课。登录云课堂后，点击极速开课，确定课程名称、课程类型及课程开始结束时间，您即可创建课程并可以将会议相关信息发送给学员。您可以在直播课表中找到您创建的课程，点击进入课堂即可开始上课。进入课堂后，当您选择暂时离开时，您可以通过直播课表中对应课程教室再次回到教室中，当您选择下课时，则会直接结束课程。
 当您的身份为学生时，可以离开课堂，若课堂没有结束，您可以通过课堂列表再次回到该课堂。
 
 #### 2. 预约开课
 
-预约开课是指您通过填写预定信息后发起的课堂，您可以在预约课程页面填写“课堂名称”、“课堂类型”、“开始时间”、“结束时间”以及对课堂的配置进行设置“提前进入课堂”、“是否允许旁听”、“邀请学员”、“课堂布局”等。预约成功后在客户端首页的“直播课表”中将为您展示今天及今天以后预约的课程。您可以将预定课
-
-程的信息通过邮箱、短信、微信、企业微信等方式发送给学员。学员可以通过课程链接一键加入课堂。当您的身份为老师离开课堂时，点击“下课”按钮，如果选择“暂时离开”，表示您暂时离开了该课堂，但您可以随时返回该课堂。若选择“下课”则终止课堂，课堂中的所有的学员都会将离开该课堂。当您的身份为学员时，点击“离开”，则会退出课堂，在课堂未结束的情况下，您随时都可以回到该课堂，如果课堂已下课则无法再进入。
+预约开课是指您通过填写预定信息后发起的课堂，您可以在预约课程页面填写“课堂名称”、“课堂类型”、“开始时间”、“结束时间”以及对课堂的配置进行设置“提前进入课堂”、“是否允许旁听”、“邀请学员”、“课堂布局”等。预约成功后在客户端首页的“直播课表”中将为您展示今天及今天以后预约的课程。您可以将预定课程的信息通过邮箱、短信、微信、企业微信等方式发送给学员。学员可以通过课程链接一键加入课堂。当您的身份为老师离开课堂时，点击“下课”按钮，如果选择“暂时离开”，表示您暂时离开了该课堂，但您可以随时返回该课堂。若选择“下课”则终止课堂，课堂中的所有的学员都会将离开该课堂。当您的身份为学员时，点击“离开”，则会退出课堂，在课堂未结束的情况下，您随时都可以回到该课堂，如果课堂已下课则无法再进入。
 
 #### 3. 邀请加入课堂
 
