--- a/product/移动与通信/云开发低代码平台/操作指南/数据源/外部数据源模板.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/数据源/外部数据源模板.md
@@ -39,8 +39,7 @@
 1. 进入左侧**页面管理**，单击**创建新页面**。
 2. 进入**大纲树**，将**表单容器**拖入**编辑区【H5】**中。
 3. 进入右侧**组件编辑** > **数据**页面，选择**表单类型**为**新建**。
-4. **数据源**选择之前新建的会议。
-5. 选择方法为 创建会议。之后即可完成 创建会议的示例表单生成。
+4. **数据源**选择之前新建的会议。之后即可完成创建会议的示例表单生成。
 ![](https://main.qcloudimg.com/raw/3a4237b872bdb4c2e62fa5976c78c590.png)
 
 
