--- a/product/计算与网络/负载均衡/购买指导/购买方式.md
+++ b/product/计算与网络/负载均衡/购买指导/购买方式.md
@@ -10,6 +10,8 @@
 3. 根据实际需求选择网络、所属项目等信息，各属性的选择请参考 [产品属性选择](https://cloud.tencent.com/document/product/214/33415)。
 4. 确认购买后，您可通过余额支付、网银支付、微信支付、QQ 钱包支付等方式进行支付。
 5. 支付完成后即开通负载均衡服务，您可进行负载均衡配置使用。
+>?传统账户类型的负载均衡实例的公网网络请在 [云服务器](https://cloud.tencent.com/document/product/213/495) 上购买，网络计费模式请参见 [公网计费模式](https://cloud.tencent.com/document/product/213/10578)。
+>
 
 ### 标准账户类型
 在官网购买负载均衡的具体操作如下：
