--- a/product/计算与网络/负载均衡/购买指导/产品属性选择.md
+++ b/product/计算与网络/负载均衡/购买指导/产品属性选择.md
@@ -31,7 +31,10 @@
   - 对内部服务器集群做故障容错和故障恢复。
   - 服务提供方想屏蔽自己的物理 IP 地址，对客户端提供透明化的服务。
 - **费用说明**
-   内网负载均衡实例为免费资源。
+   内网负载均衡实例为免费资源。	 
+>! 自**2021年11月2日00:00:00**起，所有负载均衡实例将进行架构升级，升级后所有实例将提供最大连接数5万、每秒新建连接数5000、每秒查询数（QPS）5000 的产品能力保障。为适应本次架构升级，CLB 部分计费价格将进行调整，详情请参见 [负载均衡实例升级调价公告](https://cloud.tencent.com/document/product/214/59398)：
+>- **内网负载均衡实例费用价格从0元/小时调整为0.2元/小时（部分地域为0.3元/小时）**。
+>- **公网负载均衡实例费用价格从0.02元/小时调整为0.2元/小时（部分地域为0.3元/小时）**。
 
 ## IP 版本
 负载均衡的 IP 版本，可以选择 IPv4、IPv6 或者 IPv6 NAT64。
