--- a/product/视频服务/播放器/产品简介/能力清单.md
+++ b/product/视频服务/播放器/产品简介/能力清单.md
@@ -3,7 +3,7 @@
 </style>
 
 <table>
-<tr><th>功能点</th><th>功能说明</th><th>iOS & Android</th><th>Web</th><th>Flutter</th>
+<tr><th>功能点</th><th>功能说明</th><th width=10%>iOS & Android</th><th width=10%>Web</th><th width=10%>Flutter</th>
 </tr><tr>
    <td>多种格式</td>   
    <td style="text-align:left">支持 RTMP、FLV、HLS、MP4、WebRTC 等丰富的音视频格式</td>
