--- a/product/视频服务/播放器/产品简介/能力清单.md
+++ b/product/视频服务/播放器/产品简介/能力清单.md
@@ -1,10 +1,10 @@
 <table>
 <tr>
-	<th>功能点</th>
-	<th>功能说明</th>
-	<th width=10% style="text-align:center">iOS & Android</th>
-	<th width=10% style="text-align:center">Web</th>
-	<th width=10% style="text-align:center">Flutter</th>
+   <th>功能点</th>
+   <th>功能说明</th>
+   <th width=10% style="text-align:center">iOS & Android</th>
+   <th width=10% style="text-align:center">Web</th>
+   <th width=10% style="text-align:center">Flutter</th>
 </tr><tr>
    <td>多种格式</td>   
    <td>支持 RTMP、FLV、HLS、MP4、WebRTC 等丰富的音视频格式</td>
@@ -217,19 +217,19 @@
    <td style="text-align:center">&#10003;</td>
 </tr><tr>
    <td>HLS 加密</td>
-   <td>支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密。</td>
+   <td>支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密</td>
    <td style="text-align:center">&#10003;</td>
    <td style="text-align:center">&#10003;</td>
    <td style="text-align:center">&#10003;</td>
 </tr><tr>
    <td>私有协议加密</td>
-   <td>支持在云端通过私有协议对视频进行加密，且仅能通过播放器SDK对加密后的视频进行解密播放。</td>
+   <td>支持在云端通过私有协议对视频进行加密，且仅能通过播放器SDK对加密后的视频进行解密播放</td>
    <td style="text-align:center">&#10003;</td>
    <td style="text-align:center">&#10003;</td>
    <td style="text-align:center">×</td>
 </tr><tr>
    <td>离线下载</td>
-   <td>支持离线下载加密视频后，仅可通过播放器SDK对视频进行解密播放。</td>
+   <td>支持离线下载加密视频后，仅可通过播放器SDK对视频进行解密播放</td>
    <td style="text-align:center">&#10003;</td>
    <td style="text-align:center">-</td>
    <td style="text-align:center">×</td>
