--- a/product/教育/云课堂/词汇表.md
+++ b/product/教育/云课堂/词汇表.md
@@ -11,7 +11,7 @@
 互动班课是指教室内最大学员数不超过25人，最大上台人数不超过10人的教室，互动班课允许学员自动上台。
 
 ### 公开课 
-公开课是指最大学员数不超过5000人，不支持学员上台的教室，教室内视频区域只可有老师的位置。
+公开课最多同时不超过1万人，不支持学员上台的教室，教室内视频区域只可有老师的位置。
 
 ### 上台 
 学生和老师的视频画面在教室里的视频区域显示出来，老师默认在台上，不可下台，学员可由老师控制是否在台上。
