--- a/product/物联网/物联云IoT Hub/快速入门/快速开始.md
+++ b/product/物联网/物联云IoT Hub/快速入门/快速开始.md
@@ -1,6 +1,7 @@
 为了更好地帮助用户入门，我们推荐用户在第一次使用 IoT Hub 时使用 MQTT.fx 接入。以下是接入指南：
 
 - [MQTT.fx 接入指南](https://cloud.tencent.com/document/product/634/14630)
+- 如果您需要使用除中国大陆以外的其它站点，我们推荐您参考 [设备接入地域说明](https://cloud.tencent.com/document/product/634/61228) 选择合适的站点接入。
 
 为了更好地介绍腾讯云物联网通信的功能，我们构建了一个简单的智能家居 Demo。应用场景包括：
 
