--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
@@ -17,8 +17,8 @@
    - 主题名称：以字母起始，只能包含字母、数字、“-”及“_”，最大64字符，创建后不能修改，严格区分大小写。
    - 消息堆积：未触发推送到订阅者，或订阅者接收失败的消息，暂时堆积到主题中。
    - 消息过滤类型：
-     - 标签：CMQ 提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明]()。
-     - 路由匹配：Binding key、Routing key 是组合使用的，完全兼容 RabbitMQ Topic 匹配模式。发消息时配的 Routing key 是客户端发消息带的。创建订阅关系时配的 Binding key 是 topic 和 订阅者 的绑定关系。详细规则请参考 [路由键匹配功能说明]()。
+     - 标签：CMQ 提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。
+     - 路由匹配：Binding key、Routing key 是组合使用的，完全兼容 RabbitMQ Topic 匹配模式。发消息时配的 Routing key 是客户端发消息带的。创建订阅关系时配的 Binding key 是 topic 和 订阅者 的绑定关系。详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。
 3. 单击**提交**，在主题订阅列表可以看到创建好的主题。
 
 
@@ -35,8 +35,8 @@
      - URL地址：订阅者也可以不与 Queue 结合，自己来处理消息。详情请参考 [投递消息](https://cloud.tencent.com/document/product/406/7420)。
      
    - 添加订阅者标签：添加订阅者时，需增加 FilterTag。增加 FilterTag 后，该订阅者仅能收到带该 FilterTag 的消息，单个订阅者最多可添加5个 tag。只要其中某个 tag 能匹配 Topic 的过滤标签，订阅者即可收到该次 Topic 投递的消息，若消息不带任何标签，则该订阅者无法收到该类型消息。
-     - 标签：详细规则参考 [标签匹配功能说明]()。
-     - 路由匹配：详细规则请参考 [路由键匹配功能说明]()。
+     - 标签：详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。
+     - 路由匹配：详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。
      
    - 重试策略：主题发布消息之后，会自动将消息推送给订阅，当推送失败时，有两种重试策略：
 
