--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/06 路由键匹配功能说明.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/06 路由键匹配功能说明.md
@@ -1,4 +1,4 @@
-CMQ 的路由键匹配功能类似于 RabbitMQ 的 exchange  queue，可以用于消息过滤，根据不同的条件使订阅者获取不同的消息。创建 Topic 时，可开启**路由匹配键**。
+TDMQ CMQ 版的路由键匹配功能类似于 RabbitMQ 的 exchange  queue，可以用于消息过滤，根据不同的条件使订阅者获取不同的消息。创建 Topic 时，可开启**路由匹配键**。
 
 ## 使用说明
 
