--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/05 标签键匹配功能说明.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/05 标签键匹配功能说明.md
@@ -1,4 +1,4 @@
-CMQ 的 Topic 模式支持订阅筛选标签（tag）功能，类似于 RabbitMQ 的 direct_routing 模式，topic_pattern 模式在下个迭代提供。由于筛选标签的使用策略较复杂，本文将结合不同场景进行说明。
+TDMQ CMQ 版的 Topic 模式支持订阅筛选标签（tag）功能，类似于 RabbitMQ 的 direct_routing 模式，topic_pattern 模式在下个迭代提供。由于筛选标签的使用策略较复杂，本文将结合不同场景进行说明。
 
 ## 场景说明
 
