--- a/product/计算与网络/云联网/购买指南/计费总览.md
+++ b/product/计算与网络/云联网/购买指南/计费总览.md
@@ -40,7 +40,7 @@
 >?
 >- 各地域间有10kbps免费带宽以便您测试网络质量。
 >- 同地域（不区分同账号或跨账号）5Gbps 及以下带宽免费，如果同地域有超5Gbps带宽需求，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 咨询。同地域的服务等级均为金，且不可修改。
->- 跨地域无免费额度，服务等级提供白金、金、银三个等级，用户创建云联网时可选择服务等级。
+>- 跨地域互通时，提供白金、金、银三个服务等级，用户创建云联网时可选择服务等级。
 >- 跨账号跨地域费用由云联网实例所属账号支付。
 >- 价格比例仅供参考，以实际价格为准。
 >
