--- a/product/安全服务/数字身份管控平台公众版/操作指南/接入小程序/准备工作.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/接入小程序/准备工作.md
@@ -25,7 +25,7 @@
 
 #### 配置业务域名（可选）
 1. 进入开发管理页面，单击【开发设置】，进入开发设置页面。
-2. 在业务域名配置模块中，单击【下载校验文件】，将下载的文件上传至 CIAM，详情请参见 [平台配置]()。
+2. 在业务域名配置模块中，单击【下载校验文件】，将下载的文件上传至 CIAM，详情请参见 [平台配置](https://cloud.tencent.com/document/product/1441/60596)。
 ![](https://main.qcloudimg.com/raw/4708b6e0233a8a08788d0d2c8b81880c.png)
 
 
