没有延迟消息的文档，去掉相关超链

--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/02 查看队列详情.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/02 查看队列详情.md
@@ -10,7 +10,7 @@
 在详情页中，您可以查询到：
 
 - 堆积消息总数：Activemessages，在该 Queue 中处于 Active 状态的消息总数，为近似值。
-- 延迟消息总数：如果无消费者在线，则延时消息总数会统计为0，消费者上线后该数据恢复为真实延时消息数量。详情参考 [延迟消息]()。
+- 延迟消息总数：如果无消费者在线，则延时消息总数会统计为0，消费者上线后该数据恢复为真实延时消息数量。
 - 队列基本信息（名称，ID，地域，创建时间，修改时间）。
 - 队列属性：单击右上角**修改配置**可修改队列属性。
 
@@ -24,7 +24,7 @@
   | 堆积消息数量上限       | 该限制为单个队列，最大消息堆积个数（未被删除）。单个队列的堆积消息上限为1亿条，最小值为1百万条。如需提升额度，请联系我们的技术支持。 |
   | QPS 限制                | 表示调用同一个接口的频率上限。                               |
   | 流量限制               | 生产消息最大吞吐带宽，超过此限制将会被限流（生产请求的响应时长会增加）。 |
-  | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，MQ 不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中 |
+  | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，队列不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中 |
 
 - 消息回溯：使用消息回溯功能您可在业务成功消费并删除消息后重新消费已删除的消息，详情参考 [消息回溯](https://cloud.tencent.com/document/product/1496/61018)。
 
