--- a/product/计算与网络/云联网/常见问题.md
+++ b/product/计算与网络/云联网/常见问题.md
@@ -7,8 +7,7 @@
 - 当存在跨地域互通时，费用与服务等级相关。具体收费详情请参见 [计费说明](https://cloud.tencent.com/document/product/877/18676#.E8.AE.A1.E8.B4.B9.E8.AF.B4.E6.98.8E)。
 
 ### 云联网的服务等级是什么？
-
-腾讯云云联网服务提供三种可用性等级：白金、金、银
+腾讯云云联网服务提供三种可用性等级：白金、金、银。
 - 同地域的服务等级均为金，且不可修改。
 - 跨地域互通时，提供白金、金、银三个服务等级，用户创建云联网时可选择服务等级。
 
