--- a/product/安全服务/云访问安全代理/操作指南/敏感数据识别/敏感数据资产.md
+++ b/product/安全服务/云访问安全代理/操作指南/敏感数据识别/敏感数据资产.md
@@ -23,7 +23,7 @@
 
 **列表参数说明**
 - **敏感分级分布：**是基于合规组中所选择的分级方案进行的输出。分级方案的创建及详情，可查阅 [敏感数据分级](https://cloud.tencent.com/document/product/1303/60188) 。
-- **加密规则：**本项扫描任务设定的加密规则情况，加密情况有四种，分别是 **未设置**、**未加密**、**未启用**、**已启用**、**已加密**。如未设置加密规则，可查看元数据 [加解密前期准备](https://cloud.tencent.com/document/product/1303/56118) 进行设定。
+- **加密规则：**本项扫描任务设定的加密规则情况，加密情况有五种，分别是 **未设置**、**未加密**、**未启用**、**已启用**、**已加密**。如未设置加密规则，可查看元数据 [加解密前期准备](https://cloud.tencent.com/document/product/1303/56118) 进行设定。
 - **脱敏规则：**本项扫描任务设定的脱敏规则情况，脱敏情况有两种，分别是 **未设置** 和 **已启用**。如未设置脱敏规则，可查看 [新增脱敏规则](https://cloud.tencent.com/document/product/1303/56904) 进行创建。
 - **操作**：包括脱敏和误报两项操作。
  - 脱敏 ：单击 【脱敏】，会展示该字段的脱敏规则，同时对于已设定脱敏规则的字段，支持修改脱敏规则。
