--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/04 查看监控.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/04 查看监控.md
@@ -5,7 +5,7 @@
 ## 操作步骤
 
 1. 登录 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)。
-2. 在左侧导航栏选择**队列服务**，选好好**地域**后，单击目标队列服务的“ID”，进入队列详情页面。
+2. 在左侧导航栏选择**队列服务**，选择好**地域**后，单击目标队列服务的“ID”，进入队列详情页面。
 3. 在消息详情页面，选择页面上方的**监控**页签，选择好时间范围后可看到该队列的监控数据。
 
 监控指标说明：
@@ -19,5 +19,7 @@
 | 消息总大小（字节）   | 消息当前总数据量大小                                         |
 | 消息平均大小（字节） | 消息当前平均数据量大小                                       |
 | 消息总数量（个）     | 消息当前总数量                                               |
+| 生产者数量（个）	   |  队列连接的生产者数量   |
+| 订阅者数量（个）     |	队列连接的消费者数量   |
 
 ![](https://main.qcloudimg.com/raw/aafd54c1328c3ad12f51b91504907af5.png)
