--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
@@ -53,8 +53,8 @@
 
    | 参数                | 说明                                                         |
    | ------------------- | ------------------------------------------------------------ |
-   | NameServerAddress   | API 调用地址，在 [ TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。 |
-   | SecretId、SecretKey | 云API密钥，登录 [访问管理控制台]()，在**访问密钥** > **API密钥管理**页面复制。 |
+   | NameServerAddress   | API 调用地址，在 [ TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。 |
+   | SecretId、SecretKey | 云API密钥，登录 [访问管理控制台](https://console.cloud.tencent.com/cam/overview)，在**访问密钥** > **API密钥管理**页面复制。 |
    | topicWithTag        | 消息过滤类型为**标签**的主题名称。                           |
    | tagList             | 消息过滤标签列表，用`,`隔开。                                |
    | topicWithRoute      | 消息过滤类型为**路由匹配**的主题名称。                       |
@@ -67,9 +67,9 @@
 
    | 参数                | 说明                                                         |
    | ------------------- | ------------------------------------------------------------ |
-   | NameServerAddress   | API 调用地址，在[ TDMQ 控制台](https://console.cloud.tencent.com/tdmq)的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
+   | NameServerAddress   | API 调用地址，在[ TDMQ  CMQ 版控制台](https://console.cloud.tencent.com/tdmq)的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
    | SecretId、SecretKey | 云API密钥，登录[访问管理控制台]()，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
-   | queue               | 队列名称，在[ TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
+   | queue               | 队列名称，在[ TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
 
 4. 运行生产消息程序 ProducerDemo.java，运行成功结果如下。
 	 ![](https://main.qcloudimg.com/raw/fe7a0d0cc795405feaf5f4039de80f05.png)
@@ -77,5 +77,5 @@
 5. 运行消费消息程序 SubscribeDemo.java，运行成功结果如下。
 	 ![](https://main.qcloudimg.com/raw/e58e5ec78f7beaedbc19b7447adb1d07.png)
 
-6. 在 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**主题订阅** > **监控**页面观察监控数据。
+6. 在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**主题订阅** > **监控**页面观察监控数据。
 
