--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
@@ -1,6 +1,5 @@
 ## 操作场景
-
-本文为您介绍从零开始创建一个队列服务并使用 TCP SDK 进行收发消息测试的方法，帮助您快速了解客户端接入 TDMQ CMQ 版所需的基本操作。
+本文为您介绍从零开始创建一个主题和订阅并使用 TCP SDK 进行收发消息测试的方法，帮助您快速了解客户端接入 TDMQ CMQ 版所需的基本操作。
 
 ## 前提条件
 
@@ -67,8 +66,8 @@
 
    | 参数                | 说明                                                         |
    | ------------------- | ------------------------------------------------------------ |
-   | NameServerAddress   | API 调用地址，在[ TDMQ  CMQ 版控制台](https://console.cloud.tencent.com/tdmq)的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
-   | SecretId、SecretKey | 云API密钥，登录[访问管理控制台]()，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
+   | NameServerAddress   | API 调用地址，在[ TDMQ  CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
+   | SecretId、SecretKey | 云API密钥，登录 [访问管理控制台](https://console.cloud.tencent.com/cam/overview)，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
    | queue               | 队列名称，在[ TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
 
 4. 运行生产消息程序 ProducerDemo.java，运行成功结果如下。
