--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
@@ -21,7 +21,7 @@
    | 消息生命周期           | 队列的 msgRetentionSeconds 属性， 消息在本队列中的保留时间，从发送到该队列开始经过此参数指定的时间后，该消息会变得可被删除（不一定会被及时清除）。 | 单位：秒，有效值范围：60 - 1296000秒，即1分钟 - 15天。       |
    | 消息接收长轮询等待时间 | PollingWaitSeconds，长轮询等待时，一个消息消费请求只会在取到有效消息或长轮询超时时才返回响应，类似于Ajax请求的长轮询。 | 单位：秒。有效值范围：0 - 30秒。                             |
    | 取出消息隐藏时长       | 该项为队列的VisibilityTimeout属性，每条Message都有个默认的VisibilityTimeout，Worker在接收到消息后，timeout就开始计时了。如果Worker在timeout时间内没能处理完Message，那么消息就有可能被其他Worker接收到并处理。 | 单位：秒。有效值范围：1 - 43200秒，即1秒 - 12小时。          |
-   | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，MQ 不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中。 | -                                                            |
+   | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，队列不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中。 | -                                                            |
    | 堆积消息数量上限       | 该限制为单个队列，最大消息堆积个数（未被删除）。             | 单个队列的堆积消息上限为1亿条，最小值为1百万条。如需提升额度，请联系技术支持。 |
    | 消息回溯               | 若未开启“消息回溯”能力，则消费者已消费，且确认删除的消息，会立即删除，开启该功能时，须指定回溯的“可回溯周期”。 | “可回溯周期”的范围，必须小于等于消息的生命周期。建议将回溯周期与消息的生命周期设置为相同的值，便于定位问题。 |
    | 指定时间范围           | 当开启消息回溯后可配置时间范围项。控制台默认不开启。开启后时间默认跟消息生命周期设置相同值。 | 时间范围：1秒 - 15天，最大可回溯时间点 = 当前时间 - 设置的可回溯时间范围。消息生产时间在这个值之前的不可回溯。 |
