--- a/product/管理与支持/计费相关(new)/账单管理/分账标签.md
+++ b/product/管理与支持/计费相关(new)/账单管理/分账标签.md
@@ -65,14 +65,14 @@
 在账单明细文件中，您可在表格右侧看到标签键列以及该列下每行的对应标签值。（若您未为某一行的资源设置该标签键下的标签值，则显示为“-”）。
 ![](https://main.qcloudimg.com/raw/496dfb8a488382cb43f87349b36dd51a.png)
 
-### API 说明
+## API 说明
 
 若您已为资源分配了标签且成功设置分账标签后，从当月起可从账单 API 中获取标签相关信息。
 
 在**账单明细 API** 和按**资源账单 API** 中，从设置分账标签的当月起，您可从账单 API 中获得账单数据及相应的标签信息。
 与按**项目汇总 API** 类似，您可调用按标签汇总账单 API。
 
-### 常见问题
+## 常见问题
 
 #### 对资源进行打标签且将标签键设置为分账标签后,账单中多久可以生效？
 
