--- a/product/存储与CDN/对象存储 4.0/产品简介/产品动态.md
+++ b/product/存储与CDN/对象存储 4.0/产品简介/产品动态.md
@@ -1,4 +1,24 @@
 
+## 2021年09月
+
+<table>
+<thead>
+<tr>
+<th width="20%">动态名称</th>
+<th width="50%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="15%">相关文档</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>深度归档类型新增支持南京地域</td>
+<td>深度归档类型新增支持南京地域，用户可在南京地域的存储桶将数据存储为深度归档存储类型。</td>
+<td> 2021-09-10</td>
+<td><a href="https://cloud.tencent.com/document/product/436/47803">  深度归档存储简介 </a>
+</tr>
+</tbody></table>
+
 
 ## 2021年08月
 
