--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/服务列表/服务管理.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/服务列表/服务管理.md
@@ -11,8 +11,15 @@
 1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
 2. 在 [服务治理中心-服务列表](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，单击【新建】。
 ![](https://main.qcloudimg.com/raw/3db09cdbcdc03ea877860e25f3961d0a.png)
-4.  在【新建服务】页，根据自身业务需求选择相关信息。
+3.  在【新建服务】页，根据自身业务需求选择相关信息。
 ![](https://main.qcloudimg.com/raw/b94cacb3a235ec5514bb617f9b7ae972.png)
-5. 单击【提交】，完成新建服务。
+4. 单击【提交】，完成新建服务。
 ### 编辑服务
+1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
+2. 在 [服务治理中心-服务列表](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，选择目标服务，单击【编辑】。
+3.  在【编辑服务】页，根据自身业务需求编辑相关信息。
+4. 单击【提交】，完成编辑服务。
 ### 删除服务
+1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
+2. 在 [服务治理中心-服务列表](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，选择目标服务，单击【删除】。
+3. 在二次弹窗页面确认删除。
