--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -3,13 +3,13 @@
 使用移动直播 SDK 之前，您需要开通云直播服务。腾讯云移动直播 SDK 的费用有这几部分：
 
 <table>
-<tr><th colspan=2 width=35%>费用类型</th><th>说明</th>
+<tr><th colspan=2>费用类型</th><th>说明</th>
 </tr><tr>
 <td colspan=2><a href="#sdklicense">移动直播 License</a></td>
 <td>移动直播 SDK 的使用授权费用。</td>
 </tr><tr>
-<td rowspan=2 width=13%>连麦互动费用</td>
-<td><a href="#rtc_live">新方案（RTC 连麦）</a></td>
+<td rowspan=2 width=16%>连麦互动费用</td>
+<td width=23%><a href="#rtc_live">新方案（RTC 连麦）</a></td>
 <td>基于 RTC 协议使用互动连麦功能产生的费用。</td>
 </tr><tr>
 <td><a href="#rtmp_live">老方案（云直播移动直播连麦方案 ACC）</a></td>
