--- a/product/安全服务/身份安全/多因子验证/产品简介.md
+++ b/product/安全服务/身份安全/多因子验证/产品简介.md
@@ -1,23 +1,27 @@
-多因子身份认证（Multi-Factor Authentication Service，MFAS）的目的是建立一个多层次的防御体系，通过结合两种或三种凭证（基于记忆的/基于持有物的/基于生物特征的认证手段）验证访问者的身份，使系统或资源更加安全。攻击者即使破解单一因子（如口令、人脸），应用的安全依然可以得到保障。
+腾讯安全多因子身份认证服务（Multi-Factor Authentication Service，以下简称为：MFAS）是一套多层次的身份安全防御体系，通过结合两种或三种独立不相干的认证因子（知识认证因子、拥有认证因子、固有认证因子）来验证访问者的身份，使系统或资源更加安全。攻击者即使破解单一认证因子（例如：口令、人脸），应用的安全依然可以得到保障。
+>?
+>- 知识认证因子：用户知道的某些知识，例如：密码、PIN 码、安全保护问题等。
+>- 拥有认证因子：用户拥有的某些物理对象，例如：硬件令牌、身份证、手机号码等。
+>- 固有认证因子：用户具有的某些物理特征，例如：指纹、虹膜、声音、笔迹、行为特征等。
 
-## 产品优势
 
-### 立体防御
-不仅通过简单的口令保护账号安全，而且通过多种认证手段构建立体防御（如口令+数字证书认证组合验证），即使攻击者盗取了用户的账密信息，也无法登录应用，从而保障用户信息安全。
+## 产品功能
+### 认证方式
+腾讯安全多因子身份认证充分考虑安全性、便捷性、隐私性，针对企业的不同需求，为企业量身打造最佳解决方案。配合腾讯身份验证器应用及小程序，提供如下认证方式：
 
-### 安全便捷
-支持无密码认证（Passwordless）的各种手段（如动态口令（OTP）、线上快速身份验证（FIDO）等），用户无需记忆复杂的口令，也能安全、便捷地登录应用，降低了口令泄露的风险。
+| 认证方式       | 认证详情                                                     |
+| -------------- | ------------------------------------------------------------ |
+| 短信认证       | 依据时间计算，并通过预置短信通道派发4-8位一次验证码到用户绑定的手机号。用户通过短信读取验证码，并完成多因子认证。 |
+| 移动令牌认证   | 为每一个令牌生成的唯一密钥。同时生成令牌种子，以二维码、激活码形式下发，用户通过腾讯身份验证器进行激活，生成动态令牌。腾讯安全多因子身份认证以国内、国外标准哈希算法计算动态令牌完成认证，认证过程中移动令牌软件无需联网，不需要与任何系统交互。 |
+| 小程序令牌认证 | 小程序令牌激活、认证原理与移动令牌相同，利用已有应用，例如：微信、企业微信，无需单独下载腾讯身份验证器应用，提高便捷性。 |
+| H5 令牌认证    | 与企业微信、钉钉等企业办公产品结合，以企业微信、钉钉用户数据为认证源，在应用内生成 H5 令牌，用于二次身份认证。 |
+| 扫码认证       | 与企业微信、钉钉等企业办公产品结合，以企业微信、钉钉用户数据为认证源，通过应用扫描二维码，完成身份认证。 |
+| 第三方令牌认证 | 腾讯身份验证器移动端应用及小程序支持基于标准令牌激活协议激活第三方令牌，例如：Google，RSA 等签发的令牌激活码。认证方式的安全性与签发令牌的第三方有关，腾讯身份验证器应用提供便捷的令牌一站式安全管理。 |
+| 推送认证       | 在基于移动令牌的认证方式之上，腾讯安全多因子身份认证支持向目标移动设备，发送定向推送，用户在腾讯身份验证器应用或小程序中，选择允许或拒绝此次验证申请，完成认证。用户无需将动态令牌输入认证界面，大大提高便捷性与隐私性。 |
+| 实名认证       | 腾讯身份验证器应用通过利用移动设备 NFC 能力，读取第二代身份证信息。腾讯安全多因子身份认证通过公安部门签发的公钥对信息进行加密转发，公安部门以私钥验证并解密信息，同时与其数据进行比对完成实名认证。 |
+| 生物认证       | 腾讯身份验证器移动端英语基于标准 FIDO U2F协议以及FIDO2 WebAuthN 协议，利用设备本身的基于生物特征解锁功能，完成认证。用户生物信息仅在设备本地进行验证，设备与认证源通过预置公私钥完成验证，实现集安全性、便捷性、隐私性于一体的认证方式。 |
 
-### 贴合合规
-根据《等保2.0》要求，敏感的业务系统至少通过双因子认证访问者身份，方可允许其访问对应资源。您可通过多因子身份认证更好地保护业务系统，更好通过合规测评。
-
-## 应用场景
-
-### 用户注册
-互联网应用离不开用户注册、登录环节，该环节中引入多因子身份认证产品的无密码认证服务，可为用户提供更好的体验，有助于平台降低用户流失率。
-
-### 强身份认证
-在敏感业务环节（如修改密码、大额转账）中，需要对用户身份进行二次确认，可引入多因子身份认证的数字证书认证服务，再次确认用户是本人操作。
-
-### 风险释放
-当识别到用户当前环境存在风险（如异地登录、疑似被盗号），可以通过多因子身份认证服务，要求用户进行更严格的身份认证，从而释放当前风险。
+### 控制台功能
+- 管理员可以为为用户生成、绑定、派发、激活移动令牌，并管理过期，失效令牌。令牌密钥及用户信息通过国家密保标加密准存。通过控制台管理员可设置令牌批量派发，增量派发，自动派发。用户手机端可以通过腾讯身份验证器应用激活令牌种子获得动态令牌，并通过腾讯身份验证器便捷管理多个令牌。
+- 管理员可以通过控制平台配置对接多个外部用户身份源，并通过认证策略的配置，实现不同认证源，对不同应用，使用不同形式的人证方式的动态管控。
+- 管理员通过控制平台可以定义复杂认证策略，设置多策略认证保护，既可基于用户源、用户角色、认证协议对用户的使用权限进行管控；还可通过动态密码暗语前缀划分部门等级。
