--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -5,7 +5,7 @@
 <table>
 <tr><th colspan=2>费用类型</th><th>说明</th>
 </tr><tr>
-<td colspan=2><a href="#sdklicense">移动直播 License</a></td>
+<td colspan=2><a href="#sdklicense">直播 License（原移动直播基础版 SDK License）</a></td>
 <td>移动直播 SDK 的使用授权费用。</td>
 </tr><tr>
 <td rowspan=2 width=16%>连麦互动费用</td>
@@ -332,7 +332,7 @@ RTC 连麦互动直播服务为您提供音视频通用套餐包，可按照 **1
 [](id:rtmp_live)
 ### 老方案（云直播移动直播连麦服务 ACC）
 
-本方案为通过 RTMP_AAC 实现的旧版移动直播连麦方案，推荐您优先使用 RTC 连麦新方案。如果您的直播业务中有使用到互动连麦功能和低延时播放（RTMP_ACC）功能 ，涉及终端包括微信小程序端、iOS 端以及 Android 端，那么需要按照移动直播连麦服务计费。
+本方案为通过 RTMP_AAC 实现的旧版移动直播连麦方案，推荐您优先使用 [RTC 连麦新方案](https://cloud.tencent.com/document/product/454/52751)。如果您的直播业务中有使用到互动连麦功能和低延时播放（RTMP_ACC）功能 ，涉及终端包括微信小程序端、iOS 端以及 Android 端，那么需要按照移动直播连麦服务计费。
 
 >! 
 >- 移动直播中的 CDN 线路依然按照云直播带宽或者流量计费，连麦服务仅对连麦通话和低延时播放链路进行计费。
