--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -5,7 +5,7 @@
 <table>
 <tr><th colspan=2>费用类型</th><th>说明</th>
 </tr><tr>
-<td colspan=2><a href="#sdklicense">直播 License（原移动直播基础版 SDK License）</a></td>
+<td colspan=2><a href="#sdklicense">直播推流 License（原移动直播基础版 SDK License）</a></td>
 <td>移动直播 SDK 的使用授权费用。</td>
 </tr><tr>
 <td rowspan=2 width=16%>连麦互动费用</td>
