--- a/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
+++ b/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
@@ -1,5 +1,5 @@
 腾讯安全多因子身份认证服务（以下简称为：MFAS）支持私有化交付与 SaaS 服务两种模式：
-- 如果您需要购买 MFAS，请 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 提交需求，我们将安排专人与您对接沟通，MFAS 收费规则详情请参见 [计费说明](#JFSM)。
+- 如果您需要购买 MFAS，请 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 提交需求，我们将安排专人与您对接沟通。
 - 如果您需要申请 MFAS 试用，或了解我们私有化方案，可通过 [申请试用](https://cloud.tencent.com/apply/p/h6yib8x1nce) 提交需求，我们将安排专人与您对接沟通。
 
 <table>
