--- a/product/管理与支持/计费相关(new)/账单管理/账单字段说明.md
+++ b/product/管理与支持/计费相关(new)/账单管理/账单字段说明.md
@@ -2,7 +2,7 @@
 
 <table>
 	<tr>
-		<td>字段中文名称</td><td>字段说明</td>
+		<td style="width: 20%;">字段中文名称</td><td>字段说明</td>
 	</tr>
 	<tr>
 		<td>支付者 UIN</td><td>支付者账号 ID，用户在腾讯云的唯一账号标识</td>
@@ -109,7 +109,7 @@
 ## 关键字段枚举值说明
 
 <table>
-<tr><th>字段中文名称</th><th>描述</th></tr>
+<tr><td style="width: 20%;">字段中文名称</td><th>描述</th></tr>
 <tr><td>交易类型</td><td>包年包月新购，包年包月续费，包年包月配置变更，包年包月退款，按量计费扣费，按量计费小时结，按量计费日结，按量计费月结，线下项目扣费，线下产品扣费，调账扣费，调账补偿，竞价实例小时结，线下项目调账补偿，线下产品调账补偿，优惠扣费，优惠补偿，按量计费迁入资源，按量计费迁出资源，包年包月迁入资源，包年包月迁出资源，预付费用，小时费用，预留实例退款</td></tr>
 </table>
 
