--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -5,7 +5,7 @@
 <table>
 <tr><th colspan=2>费用类型</th><th>说明</th>
 </tr><tr>
-<td colspan=2><a href="#sdklicense">直播推流 License（原移动直播基础版 SDK License）</a></td>
+<td colspan=2><a href="#sdklicense">直播推流 License（原移动直播基础版 License）</a></td>
 <td>移动直播 SDK 的使用授权费用。</td>
 </tr><tr>
 <td rowspan=2 width=16%>连麦互动费用</td>
@@ -28,7 +28,7 @@
 [](id:sdklicense)
 
 ## 移动直播 License
-在腾讯云购买指定规格的 [直播流量资源包](#live_pag_price)，我们将赠送直播推流 License（原移动直播基础版 SDK License）一年使用授权：
+在腾讯云购买指定规格的 [直播流量资源包](#live_pag_price)，我们将赠送直播推流 License（原移动直播基础版 License）一年使用授权：
 >! 
 >- 移动直播 License 仅限于解锁移动直播 SDK 在 iOS 和 Android 上的使用权限，微信小程序的直播功能开通要求详情，请参见 [微信小程序集成](https://cloud.tencent.com/document/product/454/12554)。
 >- 2021年03月01日0点起，现有的标准直播流量资源包（包括2021年03月01日前已购资源包）升级为直播流量资源包，在原有抵扣标准直播国内播放日结流量的基础上，支持按比例抵扣**国际/港澳台标准直播日结流量**和**中国内地（大陆）快直播日结流量**。
@@ -75,16 +75,16 @@
 
 | 直播流量资源包规格             | 获赠 License 类型                                            | 价格（元） |
 | ------------------------------ | ------------------------------------------------------------ | ---------- |
-| 无需购买，控制台可自助申请1次  | 直播推流 License（原移动直播基础版 SDK License）<br>有效期：28天（测试用） | 0          |
-| 10TB 直播流量资源包            | 直播推流 License（原移动直播基础版 SDK License）<br>有效期：1年 | 2,172      |
-| 50TB 直播流量资源包            | 直播推流 License（原移动直播基础版 SDK License）<br>有效期：1年 | 8,972      |
-| 200TB 直播流量资源包           | 直播推流 License（原移动直播基础版 SDK License）<br>有效期：1年 | 30,198     |
-| 1PB 直播流量资源包             | 直播推流 License（原移动直播基础版 SDK License）<br>有效期：1年 | 149,589    |
-| 不含资源包，需联系商务单独购买 | 企业版 SDK License<br>有效期：1年                            | 500,000    |
+| 无需购买，控制台可自助申请1次  | 直播推流 License（原移动直播基础版 License）<br>有效期：28天（测试用） | 0          |
+| 10TB 直播流量资源包            | 直播推流 License（原移动直播基础版 License）<br>有效期：1年 | 2,172      |
+| 50TB 直播流量资源包            | 直播推流 License（原移动直播基础版 License）<br>有效期：1年 | 8,972      |
+| 200TB 直播流量资源包           | 直播推流 License（原移动直播基础版 License）<br>有效期：1年 | 30,198     |
+| 1PB 直播流量资源包             | 直播推流 License（原移动直播基础版 License）<br>有效期：1年 | 149,589    |
+| 不含资源包，需联系商务单独购买 | 企业版 License<br>有效期：1年                            | 500,000    |
 
 **计费说明：**
 
-- 每个账号可通过 [云直播控制台](https://console.cloud.tencent.com/live/license) **免费申请1次**测试用的 [直播推流 License](https://cloud.tencent.com/document/product/454/34750)（原移动直播基础版 SDK License），有效期为28天。
+- 每个账号可通过 [云直播控制台](https://console.cloud.tencent.com/live/license) **免费申请1次**测试用的 [直播推流 License](https://cloud.tencent.com/document/product/454/34750)（原移动直播基础版 License），有效期为28天。
 - 直播流量资源包以标准直播中国内地（大陆）日结流量为基础，适用于**标准直播中国内地（大陆）日结流量**、**标准直播国际/港澳台日结流量**、**快直播中国内地（大陆）日结流量**和**快直播国际/港澳台日结流量抵扣**。在您支付购买后立即生效，有效期为1年，到期资源包若有余量则一次性扣除，流量包详细计费说明请参见 [直播流量资源包](https://cloud.tencent.com/document/product/267/34174#live_pag)。
 - 若计费方式非日结流量计费，流量包余量冻结，不参与抵扣，冻结期间不延长有效期。当计费方式切换至日结流量计费，流量包可继续使用。
 - 月结用户如需使用直播流量资源包进行抵扣，请联系商务经理协助切换计费方式为日结流量计费，新的计费方式将在次月生效。直播流量资源包有效期为购买日起1年后相同时间截止。
@@ -103,7 +103,7 @@
 - 若 50TB 流量包用于续期 License A，则 License A 到期时间更新至2022年09月02日00:00:00。
 - 若 50TB 流量包用于新增基础版正式 License B，则用户甲的账号下有 License A（到期时间为 2022年08月02日00:00:00 ）和 License B（到期时间为 2022年09月02日00:00:00），50TB 的流量包是用于该账号下的日结流量消耗抵扣，即该账号下播放域名产生的日结流量消耗均可抵扣。
 
-**除了移动直播 SDK License 授权费用外，在您使用移动直播 SDK 的过程中，还可能产生以下产品的费用，请您根据实际使用情况进行开通选购。**
+**除了移动直播 License 授权费用外，在您使用移动直播 SDK 的过程中，还可能产生以下产品的费用，请您根据实际使用情况进行开通选购。**
 
 [](id:live)
 
