--- a/product/企业应用/品牌经营管家/购买指南/购买指南.md
+++ b/product/企业应用/品牌经营管家/购买指南/购买指南.md
@@ -13,24 +13,31 @@
 
 ### 隐私检测      
 
-| 计费对象            | 价格（元） | 是否必选 | 服务内容                                                     |
-| --------------- | ---------- | -------- | ------------------------------------------------------------ |
-| 高级版/单次     | 12000      | 可选项   | - 0.5个工作日内给出隐私合规检测报告。<br>  - 针对检测报告涵盖的检测项和检测内容的疑问点进行人工解答。<br>  -  针对检测报告发现的风险项人工给出指导性的整改建议。<br>  - 提供1-2次复测。 |
-| 专家版/单次     | 24000      | 可选项   | <strong>高级版/单次全部功能+</strong><br>   - 1个工作日内给出通报中问题点检测报告。<br>  - 3个工作日内给出针对工信部标准的全量专家检测报告。<br>  - 提供1-2次高级版标准复测。 |
-| 钻石版/单次     | 59999      | 可选项   | <strong>专家版/单次全部功能+ </strong><br>  - 5个工作日内给出针对全量标准的专家检测报告。<br>  -  专家一对一解答和指导，并提供技术咨询服务直到报告中发现的问题全部整改完毕（甲乙双方达成一致不整改的问题除外）。 |
-| 高级版/年服务包 | 56666      | 可选项   | <strong>高级版/单次全部功能+</strong><br>   - 30次自动化检测。<br>  - 针对5份检测报告的人工指导服务。 |
-| 专家版/年服务包 | 96000      | 可选项   | <strong>高级版/年服务包全部功能+ </strong><br>  - 5次专家版检测报告。<br>  - 5次针对报告的专家服务。 |
-| 钻石版/年服务包 | 230000     | 可选项   | <strong>专家版/年服务包全部功能+ </strong><br>  5次钻石版检测报告。                |
-| 叠加包          | 100        | 可选项   | 下单前需与商务人员确认叠加包购买个数，再进行下单，否则下单无效。 |                  
+| 计费对象        | 价格（元） | 是否必选 | 服务内容                                                     |
+| :-------------- | :--------- | :------- | :----------------------------------------------------------- |
+| 高级版/单次     | 12000      | 可选项   | 提供一次自动化检测服务、一次对检测报告进行人工解答并给出整改建议的服务。<br/>1. 0.5个工作日内给出隐私合规检测报告。<br/>2. 针对检测报告涵盖的检测项和检测内容有疑问的地方进行人工解答。<br/>3. 针对检测报告发现的风险项人工给出指导性的整改建议。<br/>4. 提供1-2次复测。 |
+| 专家版/单次     | 24000      | 可选项   | 覆盖工信部、各省通管局、主流应用市场检测标准，提供专家合规分析报告，及时解决当前被监管通报的问题或规避潜在的通报风险。<br/>1. 1个工作日内给出通报中问题点检测报告。<br/>2. 3个工作日内给出针对工信部标准的全量专家检测报告。<br/>3. 针对检测报告涵盖的检测项和检测内容有疑问的地方进行人工解答。<br/>4. 针对检测报告发现的风险项人工给出指导性的整改建议。<br/>5. 提供1-2次高级版标准复测。<br/>注意：下单前请与商务确认最新服务内容与价格（已联系的无需重复添加），否则下单无效。 |
+| 钻石版/单次     | 59999      | 可选项   | 覆盖国家个人隐私合规相关标准和政策，进行全量专家检测，输出分析报告，及时解决当前被通报的问题或规避潜在的通报风险。<br/>覆盖的标准包括：《App 违法违规收集使用个人信息行为认定方法》、《（工信部信管函〔2019〕337号）和工信部信管函〔2020〕164号》、 《移动互联网应用程序（App）收集使用个人信息自评估指南》、《App 违法违规收集使用个人信息自评估指南》、《App 用户权益保护测评规范》等18个检测标准， 从隐私政策文本、App 收集使用个人信息行为、App 运营者对用户权利的保障共52项进行合规测评，发现不符合项并输出全量个人信息合规测评报告。<br/>1. 1个工作日内给出通报中问题点检测报告。<br/>2. 5个工作日内给出针对全量标准的专家检测报告。<br/>3. 专家一对一针对检测报告涵盖的检测项和检测内容有疑问的地方进行人工解答。<br/>4. 专家一对一针对检测报告发现的风险项人工给出指导性的整改建议。<br/>5. 专家一对一技术咨询服务直到报告里发现的问题全部整改完毕（甲乙双方达成一致不整改的问题除外）。<br/>6. 提供1-2次高级版标准复测。<br/>注意：下单前请与商务确认最新服务内容与价格（已联系的无需重复添加），否则下单无效。 |
+| 高级版/年服务包 | 56666      | 可选项   | 按高级版标准，提供30次自动化检测，并包含针对4份检测报告的人工指导服务。<br/>注意：下单前请与商务确认最新服务内容与价格（已联系的无需重复添加），否则下单无效。 |
+| 专家版/年服务包 | 96000      | 可选项   | 按高级版标准，提供30次自动化检测。<br/>按专家版标准，提供4次专家版检测报告以及4次针对报告的专家服务。<br/>注意：下单前请与商务确认最新服务内容与价格（已联系的无需重复添加），否则下单无效。 |
+| 钻石版/年服务包 | 230000     | 可选项   | 按高级版标准，提供30次自动化检测。<br/>按钻石版标准，提供4次钻石版检测报告以及4次针对报告的专家服务。<br/>注意：下单前请与商务确认最新服务内容与价格（已联系的无需重复添加），否则下单无效。 |
+| 叠加包          | 100        | 可选项   | 下单前需与商务人员确认叠加包购买个数，再进行下单，否则下单无效。 |
+
+
+    
 
 ###  网站安心服务            
 
-| 计费对象           | 价格（元/年） | 是否必选 | 服务内容                                                     |
-| -------------- | ------------- | -------- | ------------------------------------------------------------ |
-| 网站服务免费版 | 免费          | 可选项   | - 腾讯安全实名认证标签和证书。<br> - 认证标识曝光（微信搜一搜）。<br>  - 企业橱窗编辑。<br>  - 腾讯安全网址中心的拦截通知。<br>  - 恶意 URL 查询。<br>  - 代理申诉发起（2次）。<br>  - 申诉结果管理。<br>   - 同时绑定站点数量1个。<br>  - 申诉时效1个工作日。 <br> - 申诉结果通知渠道：短信、邮箱、系统查看。 |
-| 网站服务基础版 | 4666          | 可选项   | <strong>免费版所有功能+ </strong><br> -  代理申诉发起（50次）。<br>  - 同时绑定同一公司主体站点数量不超过2个。 |
-| 网站服务高级版 | 7000          | 可选项   | <strong>基础版所有功能+</strong><br>  -  代理申诉发起（100次）。<br>  - 同时绑定同一公司主体站点数量不超过5个。<br>  - QQ 拦截通知。<br> - 申诉时效0.5个工作日。 <br> -  企业专属品牌码（小程序码）。 |
-| 网站服务专业版 | 20000         | 可选项   | <strong>高级版所有功能+ </strong><br> -  代理申诉发起（500次）。<br>  - 微信拦截通知。 <br> - 申诉时效4个小时。<br>- 专属客服。 |
+
+| 计费对象               | 价格（元/年） | 是否必选 | 服务内容                                                     |
+| :--------------------- | :------------ | :------- | :----------------------------------------------------------- |
+| 网站服务基础版（按次） | 4000          | 可选项   | 可选项下单前请确认已与商务联系，否则下单无效。                 |
+| 网站服务基础版（包年） | 4666          | 可选项   | 代理申诉发起（50次），同时绑定同一公司主体站点数量不超过2个。 |
+| 网站服务高级版         | 7000          | 可选项   | 100次代理申诉，0.5个工作日响应结果。                           |
+| 网站服务专业版         | 20000         | 可选项   | 500次代理申诉，4个小时响应结果。                               |
+
+
+
 
 ## 购买方式
 进入 [品牌经营管家购买页](https://buy.cloud.tencent.com/bma) ，根据需求选择套餐，或者自由设置购买内容，系统会为您自动计算所需费用。
