--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -27,7 +27,7 @@
 
 [](id:sdklicense)
 
-## 移动直播 License
+## 直播推流 License（原移动直播基础版 License）
 在腾讯云购买指定规格的 [直播流量资源包](#live_pag_price)，我们将赠送直播推流 License（原移动直播基础版 License）一年使用授权：
 >! 
 >- 移动直播 License 仅限于解锁移动直播 SDK 在 iOS 和 Android 上的使用权限，微信小程序的直播功能开通要求详情，请参见 [微信小程序集成](https://cloud.tencent.com/document/product/454/12554)。
