--- a/product/企业应用/品牌经营管家/购买指南/购买指南.md
+++ b/product/企业应用/品牌经营管家/购买指南/购买指南.md
@@ -1,6 +1,5 @@
 ## 购买指南
-
-品牌经营管家提供多种不同的预付费模式，详细说明如下：
+进入 [品牌经营管家购买页](https://buy.cloud.tencent.com/bma) ，根据需求选择套餐，或者自由设置购买内容，系统会为您自动计算所需费用。
 
 ## 定价详情
                                                                    
@@ -9,7 +8,7 @@
 |计费对象|价格（元/年）|是否必选|服务内容|
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |   
 | 网站保护                                                 | 599999 |可选项    | 全方位监控、预警、拦截仿冒诈骗网站。 |                       
-| 应用保护                                                 | 599999   |  可选项   |全方位监控、预警、拦截仿冒诈骗应用。
+| 应用保护                                                 | 599999   |  可选项   |全方位监控、预警、拦截仿冒诈骗应用。 |  
 
 ### 隐私检测      
 
@@ -28,13 +27,12 @@
 
 ###  网站安心服务            
 
-
 | 计费对象               | 价格（元/年） | 是否必选 | 服务内容                                                     |
 | :--------------------- | :------------ | :------- | :----------------------------------------------------------- |
 | 网站服务基础版（按次） | 4000          | 可选项   | 可选项下单前请确认已与商务联系，否则下单无效。                 |
-| 网站服务基础版（包年） | 4666          | 可选项   | 代理申诉发起（50次），同时绑定同一公司主体站点数量不超过2个。 |
-| 网站服务高级版         | 7000          | 可选项   | 100次代理申诉，0.5个工作日响应结果。                           |
-| 网站服务专业版         | 20000         | 可选项   | 500次代理申诉，4个小时响应结果。                               |
+| 网站服务基础版（包年） | 4666          | 可选项   |50次代理申诉，1个工作日响应结果。 |
+| 网站服务高级版（包年）         | 7000          | 可选项   | 100次代理申诉，0.5个工作日响应结果。                           |
+| 网站服务专业版（包年）         | 20000         | 可选项   | 500次代理申诉，4个小时响应结果。                               |
 
 
 
