--- a/product/存储与CDN/对象存储 4.0/开发者指南/对象/存储类型/深度归档存储简介.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/对象/存储类型/深度归档存储简介.md
@@ -1,6 +1,6 @@
 ## 简介
 
-深度归档存储（Deep Archive）是对象存储 COS 提供的可让海量数据长期归档的存储服务。深度归档存储提供了磁带存储级别的存储单价，为用户数据长期存储提供了低成本方案。用户无需在本地维护复杂的磁带库配置，无需关注底层存储介质的演进，通过对象存储 COS 提供的 API、SDK、生态工具和控制台等丰富的人机交互手段，即可实现便捷、低成本地管理数据。
+深度归档存储（Deep Archive）是对象存储（Cloud Object Storage，COS）提供的可让海量数据长期归档的存储服务。深度归档存储提供了磁带存储级别的存储单价，为用户数据长期存储提供了低成本方案。用户无需在本地维护复杂的磁带库配置，无需关注底层存储介质的演进，通过对象存储 COS 提供的 API、SDK、生态工具和控制台等丰富的人机交互手段，即可实现便捷、低成本地管理数据。
 
 深度归档存储适用于数据访问频率极低，但需要长期保留的场景。在日志冷备场景中，企业需要按照当地法律法规要求，将每天产生的日志数据进行冷备存储，以便追溯和分析。在安防监控和自动驾驶等业务中，企业沉淀了大量的图片、视频等媒体文件，在数据被使用过后仍然需要长期归档保存。通过深度归档存储，企业可以将这些数据存储在云上，仅在需要的时候恢复，降低存储成本和运维管理难度。
 
@@ -9,12 +9,15 @@
 ## 使用方法
 
 1. 使用控制台上传
-登录 [COS 控制台](https://console.cloud.tencent.com/cos5)，单击【存储桶列表】，然后创建所支持地域（例如北京地域）的存储桶，创建完成后，在【文件列表】界面中单击【上传文件】，然后选择本地文件进行上传，在设置对象属性中将存储类型选择为【深度归档存储】，详情请参见 [上传对象](https://cloud.tencent.com/document/product/436/13321)。
+ 1. 登录 [COS 控制台](https://console.cloud.tencent.com/cos5)。
+ 2. 单击【存储桶列表】，创建所支持地域（例如北京地域）的存储桶。
+ 3. 创建完成后，在【文件列表】界面中，单击【上传文件】。
+ 4. 选择本地文件进行上传，并在设置对象属性中将存储类型选择为【深度归档存储】，详情请参见 [上传对象](https://cloud.tencent.com/document/product/436/13321)。
 ![](https://main.qcloudimg.com/raw/15a797ad6bea4c3d0b3131807b9c3c21.png)
 2. 使用 API 上传
 通过在 [PUT Object](https://cloud.tencent.com/document/product/436/7749)、[POST Object](https://cloud.tencent.com/document/product/436/14690) 或 [Initiate Multipart Upload](https://cloud.tencent.com/document/product/436/7746) 接口中将`x-cos-storage-class`设置为  `DEEP_ARCHIVE`，实现直传深度归档。
->!
->Append Object 不支持直传深度归档类型。
+>!  Append Object 不支持直传深度归档类型。
+>
 3. 使用 SDK 上传
 当前 COS 所发布的 SDK 都支持直传深度归档，具体方法是在文件上传时，将`StorageClass`参数设置为`DEEP_ARCHIVE`，实现直传深度归档。
 4. 使用工具上传
