--- a/product/监控与管理/企业组织/腾讯云客户集团账号管理声明.md
+++ b/product/监控与管理/企业组织/腾讯云客户集团账号管理声明.md
@@ -1,4 +1,4 @@
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;您正在被邀请加入集团账号管理，请您仔细核对您与邀请人是否属于同一集团组织。您可以通过集团账号管理 – 基本信息查看邀请记录列表和邀请详情，查看邀请人账号 ID、邀请人名称、权限范围、邀请日期、邀请状态、是否允许退出。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;您正在被邀请加入集团账号管理，请您仔细核对您与邀请人是否属于同一集团组织。您可以通过 [集团账号管理 – 基本信息](https://console.cloud.tencent.com/organization/setting) 查看邀请记录列表和邀请详情，查看邀请人账号 ID、邀请人名称、权限范围、邀请日期、邀请状态、是否允许退出。
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**请注意，您只能同时加入一个集团账号管理，且集团管理账号可以设置是否允许您主动退出集团账号管理。**
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;邀请在发出后，15天内有效，您可以选择接受或拒绝。选择接受时，您会加入到对应的集团账号管理中，选择拒绝时，您将不会加入对应的集团账号管理中。
