--- a/product/存储与CDN/对象存储 4.0/开发者指南/存储桶/创建存储桶.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/存储桶/创建存储桶.md
@@ -8,7 +8,7 @@
 1. 同个主账号下仅允许创建最多200个存储桶。
 2. 存储桶一旦创建成功，存储桶名称和所属地域不能修改。
 3. 同一主账号下所有存储桶名称唯一且不支持重命名。
-4. 存储桶名称仅支持小写英文字母和数字，即[a-z，0-9]、中划线“-”及其组合。支持1 - 50个字符。
+4. 存储桶名称仅支持小写英文字母和数字，即[a-z，0-9]、中划线“-”及其组合。最大允许字符由存储桶所属地域限制。
 5. 存储桶命名不能以“-”开头或结尾。
 
 
@@ -41,4 +41,3 @@
 - [PHP SDK](https://cloud.tencent.com/document/product/436/34277#.E5.88.9B.E5.BB.BA.E5.AD.98.E5.82.A8.E6.A1.B6)
 - [Python SDK](https://cloud.tencent.com/document/product/436/35150#.E5.88.9B.E5.BB.BA.E5.AD.98.E5.82.A8.E6.A1.B6)
 - [小程序 SDK](https://cloud.tencent.com/document/product/436/31953#.E5.88.9B.E5.BB.BA.E5.AD.98.E5.82.A8.E6.A1.B6)
-
