--- a/product/计算与网络/负载均衡/负载均衡实例/升级负载均衡实例.md
+++ b/product/计算与网络/负载均衡/负载均衡实例/升级负载均衡实例.md
@@ -1,4 +1,4 @@
-负载均衡的实例规格支持共享型实例和性能容量型实例。默认情况下所有实例均为共享型实例，共享型实例可升级为性能保障型实例。
+负载均衡的实例规格支持共享型实例和性能容量型实例。默认情况下所有实例均为共享型实例，共享型实例可升级为性能容量型实例。
 
 
 ## 升级优势
@@ -22,8 +22,8 @@
 ## 升级方式
 1. 登录 [负载均衡控制台](https://console.cloud.tencent.com/clb)，单击左侧导航栏的**实例管理**。
 2. 在负载均衡的实例列表中，勾选需升级的目标共享型实例，单击实例列表上方的**升级**。
-3. 在弹出的“实例升级”对话框中，单击**确认**。
-![](https://main.qcloudimg.com/raw/5893345d6b4ff83c21cfa6035cba654a.png)
+3. 在弹出的“实例升级”对话框中，单击**确定**。
+![](https://main.qcloudimg.com/raw/210d4f66291c731ac39ac9895d566dfd.png)
 
 
 ## 相关文档
