--- a/product/域名与网站/私有域解析/产品简介/使用限制.md
+++ b/product/域名与网站/私有域解析/产品简介/使用限制.md
@@ -42,7 +42,7 @@
   <tr>
     <td>单机每秒请求</td>
     <td>- </td>
-    <td>由于各 CVM 机型差异或存在不同限速值，如需进一步了解可通过<a href="https://console.cloud.tencent.com/workorder/category">提交工单</a>咨询云服务器 CVM 团队。</td>
+    <td>由于各 CVM 机型差异，存在不同限速值，如需进一步了解可通过 <a href="https://console.cloud.tencent.com/workorder/category">提交工单</a> 咨询云服务器 CVM 团队。</td>
   </tr>
 </tbody>
 </table>
