--- a/product/域名与网站/网站备案/快速备案/备案成功后处理说明.md
+++ b/product/域名与网站/网站备案/快速备案/备案成功后处理说明.md
@@ -20,8 +20,8 @@
 ### 添加网站备案号规则
 网站底部添加网站备案号，且添加的网站备案号与 [工信部域名信息备案管理系统](https://beian.miit.gov.cn/#/Integrated/recordQuery) 中的查询到的备案信息一致。
 >!
->- **广东省网站标明主体备案号，其他省份网站底部应标明网站备案号（例如：京ICP备号-1），不可以标明主体备案号（例如：京ICP备号）。**
->- 若您有多个域名指向同一页面，备案号的悬挂要求请参见 [多个域名指向同一页面时，如何在页面底部添加备案号？](链接)
+>- **广东省网站标明主体备案号，其他省份网站底部应标明网站备案号（例如：京ICP备\*\*\*\*号-1），不可以标明主体备案号（例如：京ICP备\*\*\*\*号）**。
+>- 若您有多个域名指向同一页面，备案号的悬挂要求请参见 [多个域名指向同一页面时，如何在页面底部添加备案号？](https://cloud.tencent.com/document/product/243/19618#.E5.A4.9A.E4.B8.AA.E5.9F.9F.E5.90.8D.E6.8C.87.E5.90.91.E5.90.8C.E4.B8.80.E7.BD.91.E7.AB.99.E6.97.B6.EF.BC.8C.E5.A6.82.E4.BD.95.E5.9C.A8.E9.A1.B5.E9.9D.A2.E5.BA.95.E9.83.A8.E6.B7.BB.E5.8A.A0.E5.A4.87.E6.A1.88.E5.8F.B7.EF.BC.9F)
 >- 网站底部标明的备案号已链接至工信部备案系统网址，且链接的工信部系统网址正确。
 >
 
