--- a/product/存储与CDN/对象存储 4.0/开发者指南/存储桶/创建存储桶.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/存储桶/创建存储桶.md
@@ -1,4 +1,4 @@
-将文件存放到 COS 时，您需要先创建一个存储桶用于存放对象，您可以通过控制台、工具、API 或 SDK 的方式来创建存储桶。
+将文件存放到对象存储（Cloud Object Storage，COS）时，您需要先创建一个存储桶用于存放对象，您可以通过控制台、工具、API 或 SDK 的方式来创建存储桶。
 
 创建存储桶后，您可将对象上传至该存储桶，此外还可以为存储桶配置其他功能，例如 [设置静态网站](https://cloud.tencent.com/document/product/436/14984)、[设置存储桶标签](https://cloud.tencent.com/document/product/436/34830) 、[设置存储桶加密](https://cloud.tencent.com/document/product/436/40116) 等，更多配置指引请参见 [控制台概述](https://cloud.tencent.com/document/product/436/11365)。
 
