--- a/product/存储与CDN/对象存储 4.0/开发者指南/管理数据/跨区域复制管理/存储桶复制概述.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/管理数据/跨区域复制管理/存储桶复制概述.md
@@ -1,12 +1,12 @@
 ## 简介
 
-存储桶复制是针对存储桶的一项配置，通过配置存储桶复制规则，可以在不同存储桶中自动、异步地复制**增量对象**。启用存储桶复制后，COS 将精确复制源存储桶中的对象内容（如对象元数据和版本 ID 等）到目标存储桶中，复制的对象副本拥有完全一致的属性信息。此外，源存储桶中对于对象的操作，如添加对象、删除对象等操作，也将被复制到目标存储桶中。
+存储桶复制是针对存储桶的一项配置，通过配置存储桶复制规则，可以在不同存储桶中自动、异步地复制**增量对象**。启用存储桶复制后，对象存储（Cloud Object Storage，COS）将精确复制源存储桶中的对象内容（如对象元数据和版本 ID 等）到目标存储桶中，复制的对象副本拥有完全一致的属性信息。此外，源存储桶中对于对象的操作，如添加对象、删除对象等操作，也将被复制到目标存储桶中。
 
 >!
->
 >- 开启存储桶复制功能需要同时对源存储桶和目标存储桶均启用版本控制功能。
 >- 启用存储桶复制时，除非您在复制数据时明确指定了配置对象副本的存储类型，否则对象副本将保持与源对象相同的存储类型。
 >- COS 复制时将复制源存储桶的访问控制列表（ACL），目前 COS 不支持两个不同账号的存储桶互为源存储桶和目标存储桶。
+>
 
 以下视频为您详细介绍存储桶复制：
 
