--- a/product/大数据与AI/腾讯觅影开放实验平台/服务协议/线下版.md
+++ b/product/大数据与AI/腾讯觅影开放实验平台/服务协议/线下版.md
@@ -1,4 +1,4 @@
-﻿**甲方（客户）：**&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**乙方（腾讯）：腾讯云计算（北京）有限责任公司**
+**甲方（客户）：**&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**乙方（腾讯）：腾讯云计算（北京）有限责任公司**
 **地址：**&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**地址：**
 **联系人：**&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**联系人：**
 **联系电话：**&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**联系电话：**
