--- a/product/计算与网络/负载均衡/购买指导/产品属性选择.md
+++ b/product/计算与网络/负载均衡/购买指导/产品属性选择.md
@@ -31,7 +31,7 @@
   - 对内部服务器集群做故障容错和故障恢复。
   - 服务提供方想屏蔽自己的物理 IP 地址，对客户端提供透明化的服务。
 - **费用说明**
-   内网负载均衡实例为免费资源。	 
+   内网负载均衡实例暂不收取实例费用，且不涉及公网网络费用。若为内网性能容量型负载均衡实例，则收取 LCU 费用，详情请参见 [性能容量单位 LCU 计费说明](https://cloud.tencent.com/document/product/214/58387)。	 
 
 
 ## IP 版本
