--- a/product/移动与通信/云开发低代码平台/购买指南/计费概述.md
+++ b/product/移动与通信/云开发低代码平台/购买指南/计费概述.md
@@ -1,6 +1,6 @@
 ## 微搭套餐概述
 
-微搭低代码平台为预付费模式，提供免费体验版(15 天)、基础版、高级版。所有用户均可享有 15 天免费试用，试用结束后，您可根据需要升配基础版或高级版。
+微搭低代码平台为预付费模式，提供免费体验版(3 个月)、基础版、高级版。所有用户均可享有 3 个月免费试用，试用结束后，您可根据需要升配基础版或高级版。
 
 ## 套餐详情及定价
 
@@ -8,7 +8,7 @@
    <tr>
       <th>产品特性</th>
       <th>产品功能</th>
-      <th>免费体验版(15天)</th>
+      <th>免费体验版(3个月)</th>
       <th>基础版</th>
       <th>高级版</th>
    </tr>
@@ -139,17 +139,17 @@
    <tr>
 	    <td>价格</td>
       <td>-</td>
-		<td>免费15天</td>
+		<td>免费3个月</td>
 		<td>9.9元/月</td>
 		<td>-</td>
    </tr>
 </table>
 <dx-alert infotype="explain" title=""><ul style = "margin-bottom: 0px;">
+<li>流程引擎、消息模板、角色权限等企业应用搭建能力公测阶段，基础版开放使用。</li>
 <li>套餐包内资源（如流量、存储、云数据库）支持独立升配。升配部分按 <a href="https://cloud.tencent.com/document/product/1301/57354#upgradeEnv">升配规则</a> 补充差价即可。</li>
 <li>套餐包内不限制 License。</li>
-<li>企业级能力当前公测阶段，对所有版本开放。</li></ul>
+</ul>
 </dx-alert>
-
 
 ### 指标说明
 
@@ -181,14 +181,12 @@ DAU 是指所有应用当天 DAU 累计总和，推荐 DAU 是当前资源包下
 | 推荐 DAU    | 50        | 1000     | 10000     | 50000     | 500000     |
 | 价格        | 9.9 元/月 | 30 元/月 | 104 元/月 | 390 元/月 | 2499 元/月 |
 
-
 <dx-alert infotype="explain" title="">
 <ul style = "margin-bottom: 0px;">
 <li>资源包支持独立升配，请参见 <a href="https://cloud.tencent.com/document/product/1301/57354#upgradeEnv">资源包独立升配</a>。</li>
 <li>服务商服务不同客户时，需根据客户需求，为不同客户分别购买资源包，确保客户数据安全。请参见 <a href="https://cloud.tencent.com/document/product/1301/57324#bill">服务商计费规则</a>。</li>
 <li>上述均为预付费资源包，购买后不可退款。</li></ul>
 </dx-alert>
-
 
 ## 欠费和停服
 
