--- a/product/存储与CDN/对象存储 4.0/SDK文档/Python SDK/服务端加密.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Python SDK/服务端加密.md
@@ -3,17 +3,30 @@
 
 #### 使用 COS 托管加密密钥的服务端加密（SSE-COS）保护数据
 
-由腾讯云 COS 托管主密钥和管理数据。COS 会帮助您在数据写入数据中心时自动加密，并在您取用该数据时自动解密。目前支持使用 COS 主密钥对数据进行 AES-256 加密。
+由腾讯云 COS 托管主密钥和管理数据。COS 会帮助您在数据写入数据中心时自动加密，并在您取用该数据时自动解密。目前支持使用 COS 主密钥对数据进行 AES-256 加密。SDK 通过调用 `put_object` 来完成。
 
-SDK 通过调用 `put_object` 来完成，
-
-[//]: # (.cssg-snippet-put-object-sse)
+[//]: # (.cssg-snippet-put-object-sse-cos)
 ```py
 response = client.put_object(
     Bucket='examplebucket-1250000000',
     Body=b'bytes'|file,
     Key='exampleobject',
     ServerSideEncryption='AES256'
+)
+```
+
+#### 使用 KMS 托管加密密钥的服务端加密（SSE-KMS）保护数据
+
+由腾讯云 KMS 托管主密钥和管理数据。COS 会帮助您在数据写入数据中心时自动加密，并在您取用该数据时自动解密。目前支持使用 KMS 主密钥对数据进行加密。SDK 通过调用 `put_object` 来完成。
+
+[//]: # (.cssg-snippet-put-object-sse-cos)
+```py
+response = client.put_object(
+    Bucket='examplebucket-1250000000',
+    Body=b'bytes'|file,
+    Key='exampleobject',
+    ServerSideEncryption='cos/kms',
+    SSEKMSKeyId = 'ExampleKMSkeyId' #KMSKeyId可以在这里获取 https://console.cloud.tencent.com/kms2
 )
 ```
 
