--- a/product/视频服务/实时音视频/SDK下载/版本发布日志（桌面浏览器）.md
+++ b/product/视频服务/实时音视频/SDK下载/版本发布日志（桌面浏览器）.md
@@ -11,14 +11,14 @@
 
 **Improvement**
 
-- 优化信令调度逻辑，提升弱网下的进房成功率，建议 v4.11.5 升级至该版本。
+优化信令调度逻辑，提升弱网下的进房成功率，建议 v4.11.5 升级至该版本。
 
 ## Version 4.11.5 @2021.09.04
 
 **Improvement**
 
 - 支持信令通道动态调度，提升弱网环境下连接成功率。
-- 支持跨房间混流，请参见：[Client.startMixTranscode](https://web.sdk.qcloud.com/trtc/webrtc/doc/zh-cn/Client.html#startMixTranscode)。
+- 支持跨房间混流，请参见 [Client.startMixTranscode](https://web.sdk.qcloud.com/trtc/webrtc/doc/zh-cn/Client.html#startMixTranscode)。
 
 **Bug Fixed**
 
