--- a/product/安全服务/身份安全/多因子验证/产品简介/产品概述.md
+++ b/product/安全服务/身份安全/多因子验证/产品简介/产品概述.md
@@ -22,6 +22,6 @@
 | 生物认证       | 腾讯身份验证器移动端英语基于标准 FIDO U2F协议以及FIDO2 WebAuthN 协议，利用设备本身的基于生物特征解锁功能，完成认证。用户生物信息仅在设备本地进行验证，设备与认证源通过预置公私钥完成验证，实现集安全性、便捷性、隐私性于一体的认证方式。 |
 
 ### 控制台功能
-- 管理员可以为为用户生成、绑定、派发、激活移动令牌，并管理过期，失效令牌。令牌密钥及用户信息通过国家密保标加密准存。通过控制台管理员可设置令牌批量派发，增量派发，自动派发。用户手机端可以通过腾讯身份验证器应用激活令牌种子获得动态令牌，并通过腾讯身份验证器便捷管理多个令牌。
+- 管理员可以为用户生成、绑定、派发、激活移动令牌，并管理过期，失效令牌。令牌密钥及用户信息通过国家密保标加密准存。通过控制台管理员可设置令牌批量派发，增量派发，自动派发。用户手机端可以通过腾讯身份验证器应用激活令牌种子获得动态令牌，并通过腾讯身份验证器便捷管理多个令牌。
 - 管理员可以通过控制平台配置对接多个外部用户身份源，并通过认证策略的配置，实现不同认证源，对不同应用，使用不同形式的人证方式的动态管控。
 - 管理员通过控制平台可以定义复杂认证策略，设置多策略认证保护，既可基于用户源、用户角色、认证协议对用户的使用权限进行管控；还可通过动态密码暗语前缀划分部门等级。
