--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/存储桶管理/设置清单.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/存储桶管理/设置清单.md
@@ -22,22 +22,22 @@
 4. 在左侧导航栏中，选择【基础配置】>【清单设置】，单击【添加清单】。
 ![](https://main.qcloudimg.com/raw/7bde758d2c1e02128e342deef5713215.png)
 5. 在**添加清单**页面您可以进行以下配置：
- 1. **第一步：基础信息**
+ 1. 基础信息
 ![](https://main.qcloudimg.com/raw/9877c940629d9a38df18631996cf1be9.png)
     - **规则状态**：是否开启当前清单规则。您可以选择开启/关闭清单。
     - **清单名称**：输入您的输出清单名称。
-     - **目标存储桶**：是指存储清单的存储桶，初始默认目标存储桶即源存储桶，目标存储桶必须与源存储桶处于同一地域。
+    - **目标存储桶**：是指存储清单的存储桶，初始默认目标存储桶即源存储桶，目标存储桶必须与源存储桶处于同一地域。
     - **清单报告前缀（选填）**：输入为目标存储桶选择的前缀，可对公共位置的清单文件进行分组，初始为默认值。
- 2. **第二步：筛选条件**
+ 2. 筛选条件
 ![](https://main.qcloudimg.com/raw/a90a60e6c9be1b23364f12da15598e0c.png)
-	- **文件范围**：选择清单对象的范围，是整个存储桶还是指定文件前缀。如不选择，默认整个存储桶。
+    - **文件范围**：选择清单对象的范围，是整个存储桶还是指定文件前缀。如不选择，默认整个存储桶。
 	- **对象版本**：选择清单要包含对象的所有版本还是仅当前版本。如不选择，默认只保留当前版本。
 	- **筛选标签（选填）**：通过筛选将标签相同的对象列入清单。若不填写，默认不筛选。
 	- **筛选时间（选填）**：通过筛选将修改时间为某时间点后或某时间段内的对象列入清单。若不设置，默认不筛选。
 	- **清单信息**：选择清单报告需要包含的对象的相应信息，可选项有：对象大小、存储类别、ETag、存储桶复制状态、分块上传状态、最新更新日期、标签。若不选择，默认全选。
 >! ETag（实体标签）是对象的哈希，ETag 仅反映对对象内容的更改，而不反映对其元数据的更改。ETag 不一定是对象数据的 MD5 摘要，这取决于对象的创建方式和加密方式。
 >
- 3. **第三步：输出格式**
+ 3. 输出格式
 ![](https://main.qcloudimg.com/raw/21e70601d03a7cdccd33442483836d31.png)
 	- **输出格式**：默认以 CSV 格式输出。
 	- **生成周期**：选择清单是每日/每周进行导出，默认每日导出；例如当天下午15点添加了清单，通常最晚于次日的6点生成清单文件并投递至目标存储桶。
@@ -45,7 +45,7 @@
 		 - 不加密：不加密清单，此项为默认项。
 		 - SSE-COS：使用 COS 托管密钥的服务端加密来加密报告，有关更多信息，请参见对象存储开发者指南中的 [SSE-COS 加密](https://cloud.tencent.com/document/product/436/18145#sse-cos-.E5.8A.A0.E5.AF.86)。
 	- **访问授权**：默认关闭。开启访问授权后，即可进行下一步操作。
- 4. **第四步：信息确认**
+ 4. 信息确认
 ![](https://main.qcloudimg.com/raw/9e4234f9a369c65f7c0529adee1d5666.png)
 对存储桶的清单配置信息进行确认。如需修改，点击【上一步】即可。
 6. 确认配置信息无误后，单击【确定】即可。此后 COS 将每日或每周自动生成清单文件并投递到您所设置的目标存储桶。
