feat(content detect):新增内容审核功能接口，丰富文档描述
- 新增内容审核功能接口
- 新增单链接限速demo
- 丰富guzzle7描述
- 修改预签名接口形式

--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/快速入门.md
@@ -32,7 +32,7 @@ sudo yum install php-curl
 #### 安装 SDK
 SDK 安装有三种方式：[Composer 方式](#composer)、[Phar 方式](#phar) 和 [源码方式](#Source)。
 
->! 以下安装方式均基于 guzzle6版本的 SDK，如需使用 guzzle7 版本，请下载 [guzzle7](https://github.com/tencentyun/cos-php-sdk-v5/tree/guzzle7) 分支代码，通过源码方式进行安装。
+>! 以下安装方式均基于 guzzle6版本的 SDK，如需使用 guzzle7 版本(当前仅guzzle7支持laravel8)，请下载 [guzzle7](https://github.com/tencentyun/cos-php-sdk-v5/tree/guzzle7) 分支代码，通过源码方式或`composer require --dev qcloud/cos-sdk-v5:dev-guzzle7` 进行安装。
 >
 
 <span id="composer"></span>
@@ -86,7 +86,7 @@ require  '/path/to/cos-sdk-v5.phar';
 #### 源码方式
 源码方式安装 SDK 的步骤如下：
 1.  在 [ SDK 下载页面](https://github.com/tencentyun/cos-php-sdk-v5/releases) 下载`cos-sdk-v5.tar.gz`压缩文件。
->! `Source code`压缩包为 Github 默认打包的代码包，里面不包含`vendor`目录。
+>! `Source code`压缩包为 Github 默认打包的代码包，里面不包含`vendor`目录。请注意下载release包（cos-sdk-v5.tar.gz包）而不是Source包，也不要直接clone整个仓库。
 >
 2.  解压后通过 `autoload.php` 脚本加载 SDK：
 ```php
