--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/对象操作.md
@@ -16,6 +16,7 @@
 | [DELETE Object](https://cloud.tencent.com/document/product/436/7743) | 删除单个对象             | 在存储桶中删除指定对象                         |
 | [DELETE Multiple Objects](https://cloud.tencent.com/document/product/436/8289) | 删除多个对象             | 在存储桶中批量删除对象                         |
 | [POST Object restore](https://cloud.tencent.com/document/product/436/12633) | 恢复归档对象             | 将归档类型的对象取回访问                       |
+| [单链接限速](https://cloud.tencent.com/document/product/436/40140) | 单链接限速             | 上传下载文件时进行流量控制                       |
 
 
 **分块操作**
@@ -1087,6 +1088,48 @@ try {
 | CASJobParameters | Array  | 恢复信息                                                     | 是       |
 | Tier             | String | 恢复归档存储类型的数据时，Tier 可以指定为 COS 支持的三种恢复模式，分别为 Expedited、Standard、Bulk。恢复深度归档存储类型的数据时，Tier 可以指定为 COS 支持的两种恢复模式，分别为 Standard、Bulk。 | 是       |
 
+### 单链接限速
+
+#### 功能说明
+本文档提供关于调用上传下载接口时对链接进行限速。
+
+#### 使用说明
+限速值设置范围为 819200 - 838860800，单位默认为 bit/s，即100KB/s - 100MB/s，如果超出该范围将返回400错误。
+
+#### 示例一：上传时对单链接限速
+```php
+try {
+$result = $cosClient->putObject(array(
+        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Key' => 'exampleobject',
+        'Body' => fopen($local_path, 'rb'),
+        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
+    ));
+    // 请求成功
+    print_r($result);
+} catch (\Exception $e) {
+    // 请求失败
+    echo($e);
+}
+```
+
+#### 示例二：下载时对单链接限速
+```php
+try {
+   $result = $cosClient->getObject(array(
+        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Key' => 'exampleobject',
+        'SaveAs' => '/data/exampleobject',
+        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
+    ));
+    // 请求成功
+    print_r($result);
+} catch (\Exception $e) {
+    // 请求失败
+    echo($e);
+}
+```
+
 ## 分块操作
 
 分块上传对象可包括的操作：
@@ -1921,7 +1964,7 @@ while ( $isTruncated ) {
 
 #### 功能说明
 
-该接口内部会根据文件大小，对小文件调用设置对象复制接口，对大文件调用分块复制接口。接口参数可参照`PUT Object - Copy`和`Upload Part - Copy`接口。
+该接口内部会根据文件大小，对小文件调用设置对象复制接口，对大文件调用分块复制接口。该功能常用于修改对象属性。接口参数可参照`PUT Object - Copy`和`Upload Part - Copy`接口。
 
 #### 请求示例
 
