--- a/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
+++ b/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
@@ -30,7 +30,7 @@
 ![](https://main.qcloudimg.com/raw/517daecd264f7fa8fb666a5e741da9b6.png)
 2. 在域名列表页面，可以进行新建域名、编辑域名和删除域名等操作，详情请参见 [域名列表](https://cloud.tencent.com/document/product/627/60735)。
 
-### 实例续费与拓展包购买
+### 实例续费与扩展包购买
 搜索到所需实例并查看后，展板上可以查看您购买的产品套餐的到期时间和扩展包的使用剩余情况。
 ![](https://main.qcloudimg.com/raw/7730ae51acb39f40b324d6f11c0b5678.png)
 1. 若套餐即将到期，需要续费，单击【续费】，在 Web 应用防火墙套餐续费页面，选择续费时长，单击【立即续费】，可对当前套餐进行续费。
